Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#3344 closed defect (fixed)

It takes two SIGINTs to terminate UDP reader which haven't got any data

Reported by: Andrey Utkin Owned by:
Priority: normal Component: ffmpeg
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
If there was any data flow, then ffmpeg process is interrupted well at first time. If there was none, it needs another signal.

I recall that i have once reported exactly same bug, and it was resolved.

How to reproduce:
Run the following command when there is no data flow at given UDP address, and try to interrupt it via Ctrl+C or kill command.

ffmpeg -i udp://225.3.3.3:1234?localaddr=127.0.0.1 -codec copy -f null -
ffmpeg version N-60111-g094516a Copyright (c) 2000-2014 the FFmpeg developers
  built on Jan 23 2014 19:47:13 with gcc 4.6.3 (Gentoo 4.6.3 p1.13, pie-0.5.2)
  configuration: --enable-gpl --enable-libx264 --enable-encoder=libx264 --disable-stripping --enable-debug --extra-cflags='-O0 -g -ggdb' --enable-libopus --enable-libvpx --enable-x11grab --enable-libfreetype --enable-filter=drawtext
  libavutil      52. 63.100 / 52. 63.100
  libavcodec     55. 49.100 / 55. 49.100
  libavformat    55. 25.101 / 55. 25.101
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     4.  1.100 /  4.  1.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
^Cudp://225.3.3.3:1234?localaddr=127.0.0.1: Immediate exit requested
Received signal 2: terminating.

Change History (3)

comment:1 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed

comment:2 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavformat

comment:3 by Carl Eugen Hoyos, 12 years ago

Component: avformatffmpeg
Note: See TracTickets for help on using tickets.