ffmpeg: stop protocols on interrupt when no transcoding has happened yet

Fixes Ticket3344

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>